Fix #4533: Fix word wrap property (#4608)
* fix word break property

* change word-wrap to break-word

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -939,6 +939,7 @@ p {
   margin: 0;
   text-align: left;
   word-spacing: 0;
+  word-break: break-word;
 }
 
 .oppia-long-text p {
